Site/WebContent/css/game.css
body {

}

#lobbyPanel h2{
    margin:0;
    color:#f7f5f1;
}



/*10th game row, but it's 11 here because of the header row*/
.gameRow:nth-child(11) .gameListNumber{
    color:red;
}


.gameRow.ready{
    cursor:pointer;
}

.gameRow.ready:hover td,.leadShown.active:hover td{
    background-color:deepskyblue;
    color:white;
}

.gameRow.turnReady td{
    background-color:goldenrod;
}

/*fixes an animation distortion when the turnReady rows animate*/
.gameRow.turnReady{
    background-color:transparent;
}

.gameRow.pending td{
    opacity:.8;
}

.gameRow.pending:hover td{
	
	cursor:pointer;
	
}




.lobbyPanelContent{
    display: inline-block;
    text-align: left;
    width: 100%;
    max-width: 500px;
}
#lobbyPanel{
    background-color:rgb(17, 44, 121);
    border:1px solid black;
}

#startGamePanel{
    background-color:#C21F31;
    border: 1px solid black;
}



.lobbyPanelContent button{
    height:30px;
    margin-bottom:5px;
    line-height:normal;
    vertical-align:top;
}
.lobbyPanelContent input{
    height:24px;
    margin-bottom:5px;
    line-height:normal;
    vertical-align:top;
}

.lobbyPanelContent::-moz-focus-inner,
.input::-moz-focus-inner {
    border: 0;
    padding: 0;
}

#loginTop{
    padding:.5em;
}

#registerAsNewPlayerButton{
    display:block;
    height:50px;
    width:100%;
    font-size:20px;
}

button:hover{
    color:deepskyblue;
}


tr:nth-child(even) {
    background-color: #cccccc;
}
h2{
    margin-top:0;
}


#userFormLoginSubmit{
    width: 100px;
    height: 30px;
    font-size: 15px;
}

#loginTop{
    border: 1px solid black;
    background-color:#C21F31;
}


#mainContentWrapper{
    max-width:2000px;
    padding:2em;
}

#loginPanel, #registerPanel {
    font-size:2em;
    max-width: 1041px;
    display: inline-block;
    width: 100%;
}


#loginPanel input, #loginPanel label,#registerPanel input, #registerPanel label{
    display: inline-block;
    width: 100%;
    max-width: 500px;
    height: 37px;
    margin-bottom:5px

}
#loginPanel input, #registerPanel input{
    font-size:20px;
}

#registerTop{
    background-color:#112c79;
    color:#f7f5f1;
    padding: .5em;
    border:1px solid black;
}

.userSubmitButton{
    padding:5px;
    font-size: inherit;
}

#gameStageMain{
    position:relative;
    border:4px solid #981a22;
    display: inline-block;
    width:1000px;
}

#adminPanelWrapper{
    display:inline-block;
    text-align:left;
}

#adminPanel{
    position:absolute;
    z-index:10000;
    background-color: rgb(139, 147, 255);
    border: 1px solid grey;
    padding: 1em;
    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.5);
}

#waitingScreen{
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    background-color: rgba(0,0,0,0.5);
    z-index: 500;
    font-size: 30px;
    color: white;
    text-shadow: 2px 2px black;
    text-align: center;
    padding-top: 10%;
    transition: all 1s ease;
    display:none;
}

#bottomStage > div{
    display:inline-block;
    height:150px;
    vertical-align: top;
    padding:10px;
}
#cardStage{
    display:inline-block;
    max-width: 600px;
    width: 100%;
    position:relative;
    height:150px;

}




#wrapper{
    border:1px solid black;
    height:480px;
    text-align:center;
    vertical-align: text-bottom;

}

#districtStage{
    position:relative;
    padding:1em;
    height: 328px;

}
/* =========== Turn Log ============ */
#turnLogWrapper{
    text-align:center;
    height:346px;
    width:787px;
    position: absolute;
    z-index: 200;
    left: 50%;
    margin: 0 0 0 -393.5px;
}


/* =========== DebateGame ============ */

#scrollWrapper{
    background-color:lightgrey;
    text-align:center;
    display:table;
    height:346px;
    width:787px;
    position: absolute;
    z-index: 100;
    left: 50%;
    margin: 0 0 0 -393.5px;
}

#scrollStage{
    position:relative;
    background-color:grey;
    height: 200px;
    width: 700px;
    display: inline-block;
    border-bottom:1px solid black;
    cursor:pointer;

}
#scrollCell{
    display:table-cell;
    vertical-align:middle;

}



#debater{

    display:inline-block;
    position:absolute;

    bottom:0;
    left:50px;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
#debater img{
    width:50px;
}

.obstacle{
    position:absolute;
    bottom:0;
    right:0;
    width:10px;
    background-color:green;
    display: inline-block;
    height: 10px;
}

.obstacle span{
    display:inline-block;
    margin-top:12px;
    background-color:white;
}

#scoreField{
    position: absolute;
    bottom: 0;
    left: 0;
}

#scrollOverlay{
    background-color:rgba(0, 0, 0, 0.72);
    position:absolute;
    z-index:3000;
    top:0;
    bottom:0;
    right:0;
    left:0;
    color:white;
    cursor:pointer;

}

/* =========== Icons ============ */
#buntingImage{
        width:1000px;
}

#currentPlayerImage{
  width:100px;
}

#opponentPlayerImage{
    width:150px;

}
#opponent{
    border:1px solid #112c79;
    padding:10px;
    display:inline-block;
    margin-top:10px;
    position:relative;
}
#opponentWrapper{
    margin-top: 10px;
}


#miniInfo{
    display:none;
}

.cardsMessage{
    position: absolute;
    font-size: 60px;
    text-shadow: 1px 1px 1px white;
    font-weight: bold;
    top: 30%;
    white-space: nowrap;
}

.resourceMessage{
    position: absolute;
    top: 50%;
    font-size: 30px;
    font-weight: bold;
    text-shadow: 1px 1px 1px black;
    color:green;
}

#widgetWrapper{
    position:relative;
}

#widgetWrapper button{
    margin: 0;
}

#userPanel > div{
    display: inline-block;
    margin-left:10px;
}

#userPanel{
    background-color: white;
}

.userInfo{
    font-style:italic;
}


#gamesInProgressTable{
    width:100%;
    background-color:white;
    border:1px solid black;
    font-size:17px;

    counter-reset: gameCounter;
}

#leaderBoardTable{
    counter-reset: leaderCounter;
}

.gameListNumber{
    counter-increment: gameCounter;
}
.gameListNumber:before {
    content: counter(gameCounter);
}


.leadNumber{
    counter-increment: leaderCounter;
}
.leadNumber:before{
    content: counter(leaderCounter);
}
.leadShown.active{
    cursor:pointer;
}

